--- a/body-content.html
+++ b/body-content.html
@@ -212,7 +212,7 @@
               </div>
               <div class="carousel-item">
                   <div class="skill-card">
-                      <img src="./assets/skills/Git.png" alt="Git" class="w-12 h-12 mb-2" />
+                      <img src="./assets/skills/vcontrol.png" alt="Git" class="w-12 h-12 mb-2" />
                       <p class="font-medium">Git</p>
                   </div>
               </div>
