--- a/body-content.html
+++ b/body-content.html
@@ -359,5 +359,5 @@
 </div>
 
 <footer class="text-center mt-10 mb-6 text-gray-600 text-lg" data-aos="fade-up">
-  Made with ❤️ by <span class="font-semibold">syedyshiraz</span>
+  Made with ❤️ by <span class="font-semibold">syxb.z</span>
 </footer>
